--- a/configs.json
+++ b/configs.json
@@ -1,5 +1,5 @@
 {
-    "urls": {
+    "URLS": {
         "futuresBase": "https://fapi.binance.com",
         "futuresBaseStream": "wss://fstream.binance.com/ws"
     }
