--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "ws": "^8.16.0"
   },
   "devDependencies": {
+    "jsdoc": "^4.0.2",
+    "jsdoc-to-markdown": "^8.0.1",
     "nodemon": "^3.0.3"
   }
 }
