[BNB-64] Chart stream bug
## [BNB-64] Description
Bad params formation was being sent to binance and causing the issue

--- a/configs.json
+++ b/configs.json
@@ -13,7 +13,7 @@
         "futures": {
             "marginType": "isolated",
             "exchangeFee": 0.05,
-            "maxLeverege": 125
+            "maxLeverage": 125
         }
     }
 }
